--- a/.github/workflow/snake.yml
+++ b/.github/workflow/snake.yml
@@ -4,11 +4,18 @@ on:
   schedule:
     - cron: "* */12 * * *"  # Runs daily at midnight
   workflow_dispatch:  # Allows manual trigger
-  
+  push:
+    branches:
+    - main  
 
 jobs:
-  build:
+  generate:
+    permissions:
+      contents: write
+  
     runs-on: ubuntu-latest
+    timeout-minutes: 5
+
     steps:
       - uses: actions/checkout@v2
 
